--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@headlessui/react": "^1.7.17",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
