--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
